@@ -1,8 +1,12 @@
 XbRelease notes for xmlBlaster (http://www.xmlBlaster.org)
 The "r99999" numbers are Subversion revision numbers.
 
-Changes for current git (former svn)
-====================================
+Changes for current git (previous svn)
+======================================
+ o 436bae8e5 2021-11-09 michele
+   added property clientSSLProtocol to SocketUrl to enforce a particular SSL protocol: it is used the same way as other 
+   socket plugin properties and defaults to SSLv3 for backwards compatibility.
+
  o ee3e0840b 2021-06-07 marcel
    merged async-client-connection-todead to master
 
